...
        .where((task) =>
            selectedCategories.isEmpty ||
            selectedCategories.contains(task.taskCat))
        .toList();

    if (filteredTasks.isEmpty) {
      return const Center(child: Text('No tasks to display'));
    } else {
      return ListView.builder(
        itemCount: filteredTasks.length,
        itemBuilder: ((context, index) => ListTile(
              leading: Checkbox(
                value: filteredTasks[index].completed,
...
