...
    selectedValue = widget.taskCat;

    var height = MediaQuery.of(context).size.height;
    var width = MediaQuery.of(context).size.width;

    return AlertDialog(
      title: const Text('Edit Task'),
      scrollable: true,
      content: SizedBox(
        height: height * 0.35,
        width: width,
        child: Form(
          child: Column(
...
